--- a/cluster/apps/networking/crowdsec/parsers-configmap.yaml
+++ b/cluster/apps/networking/crowdsec/parsers-configmap.yaml
@@ -48,6 +48,7 @@ data:
     ---
     filter: "evt.Meta.service == 'http' && evt.Meta.log_type in ['http_access-log', 'http_error-log']"
     onsuccess: next_stage
+    debug: true
     name: local/nginx-json
     grok:
       pattern: '%{WORD:method} %{URIPATHPARAM:request} HTTP/%{NUMBER:http_version}'
