--- a/cluster/apps/networking/crowdsec/parsers-configmap.yaml
+++ b/cluster/apps/networking/crowdsec/parsers-configmap.yaml
@@ -12,39 +12,39 @@ data:
     description: "Parse nginx access and error logs"
     statics:
       - target: evt.StrTime
-        expression: JsonExtract(evt.Line.Raw, "time_iso8601")
+        expression: JsonExtract(evt.Parsed.message, "time_iso8601")
       - parsed: "logsource"
         value: "nginx-json"
       - parsed: remote_addr
-        expression: JsonExtract(evt.Line.Raw, "remote_addr")
+        expression: JsonExtract(evt.Parsed.message, "remote_addr")
       - parsed: remote_user
-        expression: JsonExtract(evt.Line.Raw, "remote_user")
+        expression: JsonExtract(evt.Parsed.message, "remote_user")
       - meta: source_ip
-        expression: JsonExtract(evt.Line.Raw, "remote_addr")
+        expression: JsonExtract(evt.Parsed.message, "remote_addr")
       - meta: http_status
-        expression: JsonExtract(evt.Line.Raw, "status")
+        expression: JsonExtract(evt.Parsed.message, "status")
       - meta: http_path
-        expression: JsonExtract(evt.Line.Raw, "request")
+        expression: JsonExtract(evt.Parsed.message, "request")
       - meta: log_type
         value: http_access-log
       - meta: service
         value: http
       - parsed: http_user_agent
-        expression: JsonExtract(evt.Line.Raw, "http_user_agent")
+        expression: JsonExtract(evt.Parsed.message, "http_user_agent")
       - parsed: http_referer
-        expression: JsonExtract(evt.Line.Raw, "http_referrer")
+        expression: JsonExtract(evt.Parsed.message, "http_referrer")
       - parsed: target_fqdn
-        expression: JsonExtract(evt.Line.Raw, "http_host")
+        expression: JsonExtract(evt.Parsed.message, "http_host")
       - parsed: method
-        expression: JsonExtract(evt.Line.Raw, "request_method")
+        expression: JsonExtract(evt.Parsed.message, "request_method")
       - parsed: body_bytes_sent
-        expression: JsonExtract(evt.Line.Raw, "body_bytes_sent")
+        expression: JsonExtract(evt.Parsed.message, "body_bytes_sent")
       - parsed: http_version
-        expression: JsonExtract(evt.Line.Raw, "server_protocol")
+        expression: JsonExtract(evt.Parsed.message, "server_protocol")
       - parsed: status
-        expression: JsonExtract(evt.Line.Raw, "status")
+        expression: JsonExtract(evt.Parsed.message, "status")
       - parsed: full_request
-        expression: JsonExtract(evt.Line.Raw, "request")
+        expression: JsonExtract(evt.Parsed.message, "request")
     ---
     filter: "evt.Meta.service == 'http' && evt.Meta.log_type in ['http_access-log', 'http_error-log']"
     onsuccess: next_stage
