--- a/cluster/apps/monitoring/loki/loki-helm-release.yaml
+++ b/cluster/apps/monitoring/loki/loki-helm-release.yaml
@@ -26,7 +26,7 @@ spec:
     # https://grafana.com/docs/loki/latest/configuration/#configuration-file-reference
     singleBinary:
       replicas: 1
-      affinity:
+      affinity: |
         nodeAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
             - weight: 1
