feat(actual-budget): add pvc for actual budget

--- a/cluster/apps/default/actual-budget/deployment.yaml
+++ b/cluster/apps/default/actual-budget/deployment.yaml
@@ -19,34 +19,14 @@ spec:
     spec:
       containers:
         - name: actual-budget
-          # https://hub.docker.com/r/mephi00/v-rising-wine
           image: jlongster/actual-server:23.10.0@sha256:43f321864f98e7b9759507853e0e64908bb844305bbe72a3ffc893c42b962495
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 5006
-#          volumeMounts:
-#            - mountPath: "/data"
-#              name: v-rising-volume
-#          resources:
-#            requests:
-#              memory: 2048Mi
-#              cpu: 500m
-#      volumes:
-#        - name: v-rising-volume
-#          persistentVolumeClaim:
-#            claimName: v-rising-saves-pvc-v3
-      # Only run on k8-w1, non ARM
-#      affinity:
-#        nodeAffinity:
-#          requiredDuringSchedulingIgnoredDuringExecution:
-#            nodeSelectorTerms:
-#              - matchExpressions:
-#                  - key: kubernetes.io/hostname
-#                    operator: In
-#                    values:
-#                      - k8-w1
-      # id of "steam" user in image
-#      securityContext:
-#        runAsUser: 1000
-#        runAsGroup: 1000
-#        fsGroup: 1000
+          volumeMounts:
+            - mountPath: "/data"
+              name: actual-data-volume
+      volumes:
+        - name: actual-data-volume
+          persistentVolumeClaim:
+            claimName: actual-pvc
