--- a/cluster/apps/networking/crowdsec/parsers-configmap.yaml
+++ b/cluster/apps/networking/crowdsec/parsers-configmap.yaml
@@ -53,4 +53,13 @@ data:
     grok:
       pattern: '%{WORD:method} %{URIPATHPARAM:request} HTTP/%{NUMBER:http_version}'
       apply_on: full_request
-    
+  whitelist.yaml: |
+    name: crowdsecurity/whitelists
+    description: "Whitelist events from local network"
+    whitelist:
+      reason: "my ipv4 ranges"
+      ip:
+        - "192.168.1.100"
+        - "192.168.1.101"
+        - "192.168.1.102"
+        - "192.168.1.103"
