--- a/cluster/apps/default/actual-budget/sms-proxy/ingress.yaml
+++ b/cluster/apps/default/actual-budget/sms-proxy/ingress.yaml
@@ -1,30 +1,28 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: actual-budget-ingress
+  name: actual-budget-sms-proxy-ingress
   namespace: default
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
     nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
-    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
-    nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
     external-dns/is-public: "true"
     external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
 spec:
   ingressClassName: "nginx"
   rules:
-    - host: "actual.${SECRET_DOMAIN}"
+    - host: "actual-sms-proxy.${SECRET_DOMAIN}"
       http:
         paths:
           - pathType: Prefix
             path: /
             backend:
               service:
-                name: actual-budget-svc
+                name: actual-budget-sms-proxy-svc
                 port:
-                  number: 5006
+                  number: 8080
   tls:
     - hosts:
-        - "actual.${SECRET_DOMAIN}"
+        - "actual-sms-proxy.${SECRET_DOMAIN}"
