fix(renovate): ignore mb-backend and mb-frontend

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -184,6 +184,17 @@
       "matchPackageNames": [
         "ghcr.io/linuxserver/wireguard"
       ],
+    },
+    // Disable renovate for mb-frontend and mb-backend.
+    {
+      "matchDatasources": [
+        "docker"
+      ],
+      "matchPackagePatterns": [
+        "ghcr.io/shadyf/mb-frontend",
+        "ghcr.io/shadyf/mb-backend"
+      ],
+      "enabled": false
     }
   ]
 }
