--- a/cluster/apps/default/actual-budget/deployment.yaml
+++ b/cluster/apps/default/actual-budget/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: actual-budget
-          image: jlongster/actual-server:23.11.0
+          image: actualbudget/actual-server:23.11.0
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 5006
