--- a/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
+++ b/cluster/apps/longhorn-system/longhorn/longhorn-helm-release.yaml
@@ -27,6 +27,12 @@ spec:
     # https://github.com/longhorn/longhorn/issues/1861#issuecomment-716459507
     csi:
       kubeletRootDir: /var/lib/kubelet
+      attacherReplicaCount: 2
+      provisionerReplicaCount: 2
+      resizerReplicaCount: 2
+      snapshotterReplicaCount: 2
+    longhornUI:
+      replicas: 1
     # Needed when using longhorn v1.4.0 to work with kubernetes <=1.24
     enablePSP: false
     persistence:
