--- a/cluster/apps/default/ntfy/pvc.yaml
+++ b/cluster/apps/default/ntfy/pvc.yaml
@@ -10,3 +10,16 @@ spec:
   resources:
     requests:
       storage: 1Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: ntfy-auth-pvc
+  namespace: default
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: longhorn
+  resources:
+    requests:
+      storage: 256Mb
