chore(ntfy): hang ntfy pod to be able to debug what's going on

--- a/cluster/apps/default/ntfy/ntfy-helm-release.yaml
+++ b/cluster/apps/default/ntfy/ntfy-helm-release.yaml
@@ -34,7 +34,8 @@ spec:
               repository: binwiederhier/ntfy
               tag: v1.28.0
               pullPolicy: IfNotPresent
-            args: [ "serve" ]
+            command: [ "/bin/bash", "-c", "--" ]
+            args: [ "while true; do sleep 30; done;" ]
 
             env:
               TZ: Africa/Cairo
