feat(ntfy): add login screen to web app

--- a/cluster/apps/default/ntfy/configmap.yaml
+++ b/cluster/apps/default/ntfy/configmap.yaml
@@ -12,4 +12,5 @@ data:
     attachment-cache-dir: "/var/cache/ntfy/attachments"
     auth-file: "/var/lib/ntfy/user.db"
     auth-default-access: "deny-all"
+    enable-login: true
     
