--- a/cluster/apps/default/ntfy/configmap.yaml
+++ b/cluster/apps/default/ntfy/configmap.yaml
@@ -13,4 +13,6 @@ data:
     auth-file: "/var/lib/ntfy/user.db"
     auth-default-access: "deny-all"
     enable-login: true
-    
+    smtp-server-listen: ":25"
+    smtp-server-domain: "${SECRET_DOMAIN}"
+    smtp-server-addr-prefix: "ntfy-"  # optional
