--- a/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
+++ b/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
@@ -24,6 +24,11 @@ spec:
     remediation:
       retries: 3
   values:
+    # Needed to expose TCP services via ingress
+    # See https://kubernetes.github.io/ingress-nginx/user-guide/exposing-tcp-udp-services/
+    tcp:
+      - 25: "default/ntfy:25"
+
     controller:
       replicaCount: 1
       service:
