fix(ingress-nginx): fix tcp object not working

--- a/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
+++ b/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
@@ -27,7 +27,7 @@ spec:
     # Needed to expose TCP services via ingress
     # See https://kubernetes.github.io/ingress-nginx/user-guide/exposing-tcp-udp-services/
     tcp:
-      - 25: "default/ntfy:25"
+      25: "default/ntfy:25"
 
     controller:
       replicaCount: 1
