fix(ingress-nginx): use string instead of integer for key when defining tcp services

--- a/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
+++ b/cluster/apps/networking/nginx/ingress-nginx-helm-release.yaml
@@ -142,5 +142,7 @@ spec:
         - name: crowdsec-bouncer-plugin
           mountPath: /etc/nginx/lua/plugins/crowdsec
           subPath: crowdsec
+      # Needed to allow SMTP routing
+      # https://github.com/kubernetes-sigs/kustomize/issues/3446
       tcp:
-        25: default/ntfy:25
+        "25": "default/ntfy:25"
