chore(ntfy): expose smtp service as loadbalancer

--- a/cluster/apps/default/ntfy/ntfy-helm-release.yaml
+++ b/cluster/apps/default/ntfy/ntfy-helm-release.yaml
@@ -54,6 +54,8 @@ spec:
           http:
             port: 80
           smtp:
+            type: LoadBalancer
+            externalTrafficPolicy: Local
             port: 25
             primary: false
             protocol: TCP
