chore(ntfy): fix wrongly formatted svc for smtp

--- a/cluster/apps/default/ntfy/ntfy-helm-release.yaml
+++ b/cluster/apps/default/ntfy/ntfy-helm-release.yaml
@@ -53,9 +53,13 @@ spec:
         ports:
           http:
             port: 80
+      smtp:
+        type: LoadBalancer
+        externalTrafficPolicy: Local
+        annotations:
+          metallb.universe.tf/loadBalancerIPs: 192.168.1.244
+        ports:
           smtp:
-            type: LoadBalancer
-            externalTrafficPolicy: Local
             port: 25
             primary: false
             protocol: TCP
