chore(ntfy): fix missing controller field

--- a/cluster/apps/default/ntfy/ntfy-helm-release.yaml
+++ b/cluster/apps/default/ntfy/ntfy-helm-release.yaml
@@ -54,6 +54,7 @@ spec:
           http:
             port: 80
       smtp:
+        controller: main
         type: LoadBalancer
         externalTrafficPolicy: Local
         annotations:
