chore(ntfy): add missing primary field

--- a/cluster/apps/default/ntfy/ntfy-helm-release.yaml
+++ b/cluster/apps/default/ntfy/ntfy-helm-release.yaml
@@ -55,6 +55,7 @@ spec:
             port: 80
       smtp:
         controller: main
+        primary: false
         type: LoadBalancer
         externalTrafficPolicy: Local
         annotations:
