chore(ntfy): adjust smtp server domain

--- a/cluster/apps/default/ntfy/configmap.yaml
+++ b/cluster/apps/default/ntfy/configmap.yaml
@@ -14,5 +14,5 @@ data:
     auth-default-access: "deny-all"
     enable-login: true
     smtp-server-listen: ":25"
-    smtp-server-domain: "${SECRET_DOMAIN}"
+    smtp-server-domain: "ntfy.${SECRET_DOMAIN}"
     smtp-server-addr-prefix: "ntfy-"  # optional
