--- a/cluster/apps/default/ntfy/ntfy-helm-release.yaml
+++ b/cluster/apps/default/ntfy/ntfy-helm-release.yaml
@@ -53,18 +53,18 @@ spec:
         ports:
           http:
             port: 80
-      smtp:
-        controller: main
-        primary: false
-        type: LoadBalancer
-        externalTrafficPolicy: Local
-        annotations:
-          metallb.universe.tf/loadBalancerIPs: 192.168.1.244
-        ports:
-          smtp:
-            port: 25
-            primary: false
-            protocol: TCP
+#      smtp:
+#        controller: main
+#        primary: false
+#        type: LoadBalancer
+#        externalTrafficPolicy: Local
+#        annotations:
+#          metallb.universe.tf/loadBalancerIPs: 192.168.1.244
+#        ports:
+#          smtp:
+#            port: 25
+#            primary: false
+#            protocol: TCP
 
 
     ingress:
