chore(ntfy): bring back smtp service

--- a/cluster/apps/default/ntfy/ntfy-helm-release.yaml
+++ b/cluster/apps/default/ntfy/ntfy-helm-release.yaml
@@ -53,6 +53,10 @@ spec:
         ports:
           http:
             port: 80
+          smtp:
+            port: 25
+            primary: false
+            protocol: TCP
 #      smtp:
 #        controller: main
 #        primary: false
