--- a/cluster/apps/default/ntfy/stunnel-configmap.yaml
+++ b/cluster/apps/default/ntfy/stunnel-configmap.yaml
@@ -10,16 +10,14 @@ data:
     apk add --no-cache ca-certificates stunnel
     
     cat << EOF > /etc/stunnel/stunnel.conf
-    options = NO_SSLv2
-    options = NO_SSLv3
     CApath = /conf/ssl/
     pid = /var/run/stunnel.pid
     foreground = yes
-    debug = 7
+    debug = 5
     [service-tls-tcp]
     cert   = /conf/ssl/tls.crt
     key    = /conf/ssl/tls.key
-    sslVersionMin = TLSv1
+    sslVersionMin = SSLv3
     accept = 0.0.0.0:587
     connect = 127.0.0.1:25
     TIMEOUTbusy    = 300
