chore(stunnel): reduce security level

--- a/cluster/apps/default/ntfy/stunnel-configmap.yaml
+++ b/cluster/apps/default/ntfy/stunnel-configmap.yaml
@@ -17,6 +17,7 @@ data:
     cert   = /conf/ssl/tls.crt
     key    = /conf/ssl/tls.key
     sslVersionMin = ALL
+    securityLevel = 1
     
     [service-tls-tcp]
     accept = 0.0.0.0:587
