chore(stunnel): another attempt at making this work

--- a/cluster/apps/default/ntfy/stunnel-configmap.yaml
+++ b/cluster/apps/default/ntfy/stunnel-configmap.yaml
@@ -18,6 +18,7 @@ data:
     key    = /conf/ssl/tls.key
     
     [service-tls-tcp]
+    options = -NO_SSLv3
     sslVersionMin = all
     securityLevel = 2
     accept = 0.0.0.0:587
