--- a/cluster/apps/default/ntfy/configmap.yaml
+++ b/cluster/apps/default/ntfy/configmap.yaml
@@ -16,3 +16,5 @@ data:
     smtp-server-listen: ":25"
     smtp-server-domain: "ntfy.${SECRET_DOMAIN}"
     #smtp-server-addr-prefix: "ntfy-"  # optional
+    web-root: disable
+    
