--- a/cluster/apps/default/radarr/radarr-helm-release.yaml
+++ b/cluster/apps/default/radarr/radarr-helm-release.yaml
@@ -21,6 +21,8 @@ spec:
       tag: 5.1.3.8246
     env:
       TZ: "Africa/Cairo"
+      RADARR__AUTHENTICATION_METHOD: External
+      RADARR__AUTHENTICATION_REQUIRED: DisabledForLocalAddresses
     ingress:
       main:
         enabled: true
