--- a/cluster/apps/kube-system/descheduler/descheduler-helm-release.yaml
+++ b/cluster/apps/kube-system/descheduler/descheduler-helm-release.yaml
@@ -50,7 +50,7 @@ spec:
           params:
             nodeFit: true
         LowNodeUtilization:
-          enabled: false
+          enabled: true
         RemoveFailedPods:
           enabled: true
           params:
