--- a/cluster/apps/networking/external-dns/external-dns-helm-release.yaml
+++ b/cluster/apps/networking/external-dns/external-dns-helm-release.yaml
@@ -46,12 +46,12 @@ spec:
         cpu: 25m
       limits:
         memory: 250Mi
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-            - matchExpressions:
-                - key: beta.kubernetes.io/arch
-                  operator: In
-                  values:
-                    - arm64
+#    affinity:
+#      nodeAffinity:
+#        requiredDuringSchedulingIgnoredDuringExecution:
+#          nodeSelectorTerms:
+#            - matchExpressions:
+#                - key: beta.kubernetes.io/arch
+#                  operator: In
+#                  values:
+#                    - arm64
