--- a/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
+++ b/cluster/apps/networking/oauth2-proxy/oauth2-proxy-helm-release.yaml
@@ -27,7 +27,7 @@ spec:
   values:
     image:
       repository: "quay.io/oauth2-proxy/oauth2-proxy"
-      tag: "v7.5.1-arm64"
+      tag: "v7.5.1"
 
     config:
       existingSecret: oauth2-proxy-client-secrets
