--- a/cluster/apps/monitoring/kube-prometheus-stack/kube-prometheus-stack-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/kube-prometheus-stack-release.yaml
@@ -195,8 +195,8 @@ spec:
         resources:
           limits:
             cpu: 200m
-      admissionWebhooks:
-        enabled: false
+#      admissionWebhooks:
+#        enabled: false
 
     prometheus:
       ingress:
